--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -3,35 +3,32 @@
 /* Small desktops */
 
 @media (max-width: 1050px) {
-
   .materialsText h2 {
     line-height: 4.5rem;
   }
 
   .mainBenefits {
+    .emptyFlex {
+      width: 20px;
+    }
 
-  .emptyFlex {
-    width: 20px;
-  }
+    .benefitsText1 {
+      margin-bottom: 30px;
+    }
 
-  .benefitsText1 {
-    margin-bottom: 30px;
-  }
+    .benefitsText2 {
+      margin-top: 30px;
+    }
 
-   .benefitsText2 {
-    margin-top: 30px;
-  }
-
-  p {
-    margin-right: 10px;
-  }
+    p {
+      margin-right: 10px;
+    }
   }
 }
 
 /* Landscape tablet */
 
 @media (max-width: 980px) {
-
   .mainFeatures h2 {
     font-size: 2.5rem;
   }
@@ -44,26 +41,58 @@
   .featuresText3 {
     margin-bottom: 30px;
   }
-
 }
 
 /* Portrait tablet */
 
 @media (max-width: 900px) {
 
+  h2 {
+      font-size: 3rem;
+  }
+
+.materials {
+
+  margin-bottom: 15px;
+
+  .materialsImage {
+    display: none;
+  }
+
+  .materialsFlex {
+    padding: 0;
+  }
+
+  .materialsText {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  
+  h2 {
+    margin: 15px;
+  }
+
+  p {
+    width: 100%;
+  }
+}
+
   .mainFeaturesFlex1 {
     flex-direction: column;
+
     h2 {
-      font-size: 3rem;
       text-align: center;
     }
 
     .featuresIcon {
       height: fit-content;
-      padding-top:22px;
+      padding-top: 22px;
 
       i {
-        padding-top:22px;
+        padding-top: 22px;
       }
     }
 
@@ -76,75 +105,78 @@
   .featuresText2,
   .featuresText3,
   .featuresText4 {
-    margin:0;
-    
+    margin: 0;
+
     align-items: center;
   }
 
   .customizedFlex,
-  .communityFlex  {
+  .communityFlex {
     width: 90%;
-}
-
-.benefitsWrapper {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.benefitsFlexContainer1,
-.benefitsFlexContainer2 {
-  border: 2px solid red;
-flex-direction: column;
-
-  width: 100%;
-  height: auto;
-  justify-content: center;
-
-  img {
-    position: relative;
-    
   }
-}
 
-.benefitsFlexContainer2 {
-  border: 2px solid gold;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column-reverse;
-}
-
-.benefitsText1 {
-  right: 0;
-}
-
-.benefitsText2 {
-  left: 0;
-}
-
-.benefitsText1,
-.benefitsText2 {
-  height: 50%;
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  
-  width: 90%;
-
-  p {
-    text-align: center;
+  .benefitsWrapper {
+    display: flex;
+    flex-wrap: wrap;
   }
-}
 
+  .benefitsFlexContainer1,
+  .benefitsFlexContainer2 {
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    justify-content: center;
 
-
-  .mainStyleSearch {
-    p {
-      width: 90%;
+    img {
+      position: initial;
+      box-shadow: none;
     }
   }
 
+  .benefitsFlexContainer2 {
+    flex-direction: column-reverse;
+  }
+
+  .benefitsImage img {
+    height: 400px;
+    object-fit: cover;
+    object-position: 0 -50px;
+  }
+
+  .benefitsText1 {
+    right: 0;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
+
+  .benefitsText2 {
+    left: 0;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+
+  .benefitsText1,
+  .benefitsText2 {
+    height: 50%;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+
+    p {
+      text-align: left;
+    }
+  }
+
+  .mainStyleSearch {
+    p {
+      width: 95%;
+    }
+  }
 }
 
 /* Landscape phones and down */
