--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,6 +258,18 @@ body {
   position: relative;
 }
 
+.hamburgerMenu {
+  font-size: 5rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  position: fixed;
+  z-index: 10;
+  top: 43px;
+  right: 40px;
+  display: none;
+}
+
 .mainHeaderNavFlex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1544,6 +1556,9 @@ a {
   .materials {
     margin-bottom: 15px;
   }
+  .materials .linkButton {
+    margin-top: 25px;
+  }
   .materials .materialsImage {
     display: none;
   }
@@ -1604,6 +1619,9 @@ a {
   .customizedFlex,
   .communityFlex {
     width: 90%;
+  }
+  .mainBenefits .linkButton {
+    margin-top: 25px;
   }
   .benefitsWrapper {
     display: -webkit-box;
@@ -1678,6 +1696,68 @@ a {
   }
   .mainStyleSearch p {
     width: 95%;
+  }
+  .mainStyleSearch .linkButton {
+    margin-bottom: 4%;
+  }
+}
+
+@media (max-width: 750px) {
+  .mainStyleSearch .styleSearchFlex {
+    margin-top: 25px;
+  }
+  .mainStyleSearch .linkButton {
+    margin-bottom: 35px;
+  }
+  .mainHeaderNav input[type="checkbox"]:checked + ul {
+    right: -7px;
+  }
+  .mainHeaderImageFlex h1 {
+    font-size: 5rem;
+  }
+  .hamburgerMenu {
+    display: block;
+    color: #065635;
+  }
+  .mainHeaderImage {
+    display: none;
+  }
+  .mainHeaderNav {
+    position: relative;
+  }
+  .mainHeaderNav ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: fixed;
+    right: -400px;
+    top: 130px;
+    z-index: 10;
+    padding: 0;
+    background: rgba(224, 253, 223, 0.8);
+    height: 420px;
+    width: 257px;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+    border-radius: 10px;
+  }
+  .mainHeaderNav ul li {
+    text-align: center;
+    padding: 35px 0;
+  }
+  .mainHeaderNav ul li:active {
+    background-color: rgba(6, 86, 53, 0.8);
+  }
+  .mainHeaderNav ul li a {
+    font-size: 3rem;
+    color: #065635;
+  }
+  .mainHeaderNav ul li a:hover {
+    border-bottom: none;
+  }
+  .mainHeaderNav ul li a:active {
+    color: #F5F5F5;
   }
 }
 
