--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -46,42 +46,40 @@
 /* Portrait tablet */
 
 @media (max-width: 900px) {
-
   h2 {
-      font-size: 3rem;
+    font-size: 3rem;
   }
 
-.materials {
+  .materials {
+    .linkButton {
+      margin-top: 25px;
+    }
+    margin-bottom: 15px;
 
-  .linkButton {
-    margin-top: 25px;
-  }
-  margin-bottom: 15px;
+    .materialsImage {
+      display: none;
+    }
 
-  .materialsImage {
-    display: none;
-  }
+    .materialsFlex {
+      padding: 0;
+    }
 
-  .materialsFlex {
-    padding: 0;
-  }
+    .materialsText {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-items: center;
+    }
 
-  .materialsText {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-  }
-  
-  h2 {
-    margin: 15px;
-  }
+    h2 {
+      margin: 15px;
+    }
 
-  p {
-    width: 100%;
+    p {
+      width: 100%;
+    }
   }
-}
 
   .mainFeaturesFlex1 {
     flex-direction: column;
@@ -147,7 +145,7 @@
   }
 
   .benefitsImage img {
-    height: 400px;
+    height: 300px;
     object-fit: cover;
     object-position: 0 -50px;
   }
@@ -193,9 +191,7 @@
 }
 
 @media (max-width: 750px) {
-
   .mainStyleSearch {
-    
     .styleSearchFlex {
       margin-top: 25px;
     }
@@ -206,10 +202,8 @@
   }
 
   .mainHeaderNav {
-   
-
-    input[type="checkbox"]:checked + ul{
-     right: -7px;
+    input[type="checkbox"]:checked + ul {
+      right: -7px;
     }
   }
 
@@ -219,10 +213,10 @@
     }
   }
 
-
   .hamburgerMenu {
     display: block;
     color: $everGreen;
+    opacity: 1;
   }
 
   .mainHeaderImage {
@@ -231,8 +225,7 @@
 
   .mainHeaderNav {
     position: relative;
-   
-     
+
     ul {
       flex-direction: column;
       position: fixed;
@@ -240,23 +233,20 @@
       top: 130px;
       z-index: 10;
       padding: 0;
-      background: rgba(224,253,223,.8);
+      background: rgba(224, 253, 223, 0.8);
       height: 420px;
       width: 257px;
-      transition: all .5s ease-in-out;
+      transition: all 0.5s ease-in-out;
       border-radius: 10px;
-
-   
 
       li {
         text-align: center;
         padding: 35px 0;
-        
 
         &:active {
-          background-color: rgba(6,86,53,.8);
+          background-color: rgba(6, 86, 53, 0.8);
         }
-        
+
         a {
           font-size: 3rem;
           color: $everGreen;
@@ -269,17 +259,79 @@
             color: $offWhite;
           }
         }
-        
-
       }
     }
   }
 
+  .mainImageContainer:nth-of-type(1),
+  .mainImageContainer:nth-of-type(2) {
+    display: none;
+  }
 
+  .mainImagesFlex {
+    justify-content: center;
+  }
 
+  .mainFeaturesFlex1 {
+    margin-bottom: 20px;
+
+    .featuresIcon {
+      display: none;
+    }
+
+    .featuresText1,
+    .featuresText2,
+    .featuresText3 {
+      border-bottom: 10px solid $yellow;
+    }
+  }
+
+  .materialsText {
+    padding: 30px 0;
+
+    h2 {
+      font-size: 2.4rem;
+      margin: 20px 0;
+    }
+  }
 }
 
-/* Landscape phones and down */
+@media (max-width: 650px) {
 
-@media (max-width: 500px) {
+.mainFeatures {
+  .featuresText1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 30px;
+  }
+
+  .featuresText2 {
+    margin-top: 20px;
+    padding-bottom: 30px;
+  }
+
+  .featuresText4 {
+    margin-top: 30px;
+    padding-bottom: 10px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
