--- a/styles/styles.css
+++ b/styles/styles.css
@@ -268,6 +268,7 @@ body {
   top: 43px;
   right: 40px;
   display: none;
+  opacity: 0;
 }
 
 .mainHeaderNavFlex {
@@ -1655,7 +1656,7 @@ a {
             flex-direction: column-reverse;
   }
   .benefitsImage img {
-    height: 400px;
+    height: 300px;
     -o-object-fit: cover;
        object-fit: cover;
     -o-object-position: 0 -50px;
@@ -1718,6 +1719,7 @@ a {
   .hamburgerMenu {
     display: block;
     color: #065635;
+    opacity: 1;
   }
   .mainHeaderImage {
     display: none;
@@ -1738,8 +1740,8 @@ a {
     background: rgba(224, 253, 223, 0.8);
     height: 420px;
     width: 257px;
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
     border-radius: 10px;
   }
   .mainHeaderNav ul li {
@@ -1759,6 +1761,47 @@ a {
   .mainHeaderNav ul li a:active {
     color: #F5F5F5;
   }
+  .mainImageContainer:nth-of-type(1),
+  .mainImageContainer:nth-of-type(2) {
+    display: none;
+  }
+  .mainImagesFlex {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .mainFeaturesFlex1 {
+    margin-bottom: 20px;
+  }
+  .mainFeaturesFlex1 .featuresIcon {
+    display: none;
+  }
+  .mainFeaturesFlex1 .featuresText1,
+  .mainFeaturesFlex1 .featuresText2,
+  .mainFeaturesFlex1 .featuresText3 {
+    border-bottom: 10px solid #F8FB05;
+  }
+  .materialsText {
+    padding: 30px 0;
+  }
+  .materialsText h2 {
+    font-size: 2.4rem;
+    margin: 20px 0;
+  }
 }
 
-/* Landscape phones and down */
+@media (max-width: 650px) {
+  .mainFeatures .featuresText1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 30px;
+  }
+  .mainFeatures .featuresText2 {
+    margin-top: 20px;
+    padding-bottom: 30px;
+  }
+  .mainFeatures .featuresText4 {
+    margin-top: 30px;
+    padding-bottom: 10px;
+  }
+}
