--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -297,132 +297,175 @@
 }
 
 @media (max-width: 650px) {
+  .mainFeatures {
+    .featuresText1 {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding-bottom: 30px;
+    }
 
-.mainFeatures {
-  .featuresText1 {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-bottom: 30px;
-  }
+    .featuresText2 {
+      margin-top: 20px;
+      padding-bottom: 30px;
+    }
 
-  .featuresText2 {
-    margin-top: 20px;
-    padding-bottom: 30px;
-  }
-
-  .featuresText4 {
-    margin-top: 30px;
-    padding-bottom: 10px;
+    .featuresText4 {
+      margin-top: 30px;
+      padding-bottom: 10px;
+    }
   }
 }
-
-}
-
 
 @media (max-width: 500px) {
-
-.mainHeader {
-  h1 {
-    font-size: 4rem;
-    line-height: 1.4;
-  }
-}
-
-.materials {
-  h2 {
-    text-align: center;
-  }
-}
-
-.mainFeatures {
-  .featuresText1 {
-  
-    margin-top: 70px;
-    margin-bottom: 20px;
-    padding-bottom: 100px;
+  .mainHeader {
+    h1 {
+      font-size: 4rem;
+      line-height: 1.4;
+    }
   }
 
-  .featuresText2 {
+  .materials {
+    h2 {
+      text-align: center;
+    }
+  }
 
-    margin-top: 30px;
+  .mainFeatures {
+    .featuresText1 {
+      margin-top: 70px;
+      margin-bottom: 20px;
+      padding-bottom: 100px;
+    }
+
+    .featuresText2 {
+      margin-top: 30px;
+      padding-bottom: 40px;
+    }
+
+    .featuresText3 {
+      margin-top: 50px;
+      padding-bottom: 50px;
+    }
+
+    .featuresText4 {
+      margin-top: 70px;
+      padding-bottom: 50px;
+    }
+  }
+
+  .benefitsText1 {
     padding-bottom: 40px;
   }
 
-  .featuresText3 {
-
-    margin-top: 50px;
-    padding-bottom: 50px;
+  .benefitsText2 {
+    padding-bottom: 30px;
   }
-
-  .featuresText4 {
-
-    margin-top: 70px;
-    padding-bottom: 50px;
-  }
-}
-
-.benefitsText1 {
-  padding-bottom: 40px;
-}
-
-.benefitsText2 {
-  padding-bottom: 30px;
-}
 }
 
 @media (max-width: 430px) {
-
-    .mainHeader {
-      h1 {
-        font-size:2.8rem;
-        width: 80%;
-        margin: 45px 0;
-        margin-left: 30px;
-      }
-    }
-
-    .mainHeaderImageFlex {
-  
-      display: flex;
-      flex-wrap: nowrap;
-      text-align: left;
-      // border: 2px solid green;
-      width: auto;
-      min-width: 200px;
-      justify-content: flex-start;
-      position: relative;
-      right: initial;
-    }
-
-    .mainImagesFlex:last-child{
+  .mainHeader {
+    h1 {
+      font-size: 2.8rem;
       width: 80%;
-      margin: 0 auto;
+      margin: 45px 0;
+      margin-left: 30px;
     }
+  }
 
-    .mainImages {
-      min-height: 400px;
-    }
+  .mainHeaderImageFlex {
+    display: flex;
+    flex-wrap: nowrap;
+    text-align: left;
+    // border: 2px solid green;
+    width: auto;
+    min-width: 200px;
+    justify-content: flex-start;
+    position: relative;
+    right: initial;
+  }
 
-    .customizedFlex {
-      margin-top: 50px;
-    }
-   
-    .mainFeatures {
-     height: 1200px;
-      margin-top: 0;
-    }
+  .mainImagesFlex:last-child {
+    width: 80%;
+    margin: 0 auto;
+  }
 
-    .featuresText1,
-    .featuresText2,
-    .featuresText3,
-    .featuresText4 {
-      height: 210px;
-      padding:0;
-      margin:0;
-    }
+  .mainImages {
+    min-height: 400px;
+  }
 
+  .customizedFlex {
+    margin-top: 50px;
+  }
+
+  .mainFeatures {
+    height: 1200px;
+    margin-top: 0;
+  }
+
+  .featuresText1,
+  .featuresText2,
+  .featuresText3,
+  .featuresText4 {
+    height: 210px;
+    padding: 0;
+    margin: 0;
+  }
 }
 
-@media (max-width: 650px) {
-  
+@media (max-width: 365px) {
+  .materials h2 {
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+
+  .mainHeaderImageFlex {
+    position: relative;
+    top: 100px;
+    text-align: center;
+
+    h1 {
+      font-size: 3rem;
+    }
+  }
+
+  .mainFeatures h2 {
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+
+  .featuresText1,
+  .featuresText2,
+  .featuresText3,
+  .featuresText4 {
+    height: 225px;
+  }
+
+  .customizedFlex {
+    position: relative;
+    top: -20px;
+  }
+
+  .mainBenefits {
+    margin-top: 30px;
+
+    h2 {
+      font-size: 2rem;
+      line-height: 3rem;
+      padding-bottom: 10px;
+    }
+  }
+
+  .benefitsFlexContainer1 {
+    height: 600px;
+  }
+
+  .benefitsText1 p,
+  .benefitsText2 p {
+    width: 80%;
+  }
+
+  .mainStyleSearch h2 {
+    font-size: 2rem;
+    line-height: 3rem;
+  }
 }
