started fixing images in benefits section

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -446,8 +446,7 @@
   }
 
   .mainBenefits {
-    margin-top: 30px;
-
+ 
     h2 {
       font-size: 2rem;
       line-height: 3rem;
@@ -455,8 +454,13 @@
     }
   }
 
+
+
   .benefitsFlexContainer1 {
-    height: 600px;
+    /* justify-content: center; */
+     justify-content: flex-start;
+    align-items: center;
+    min-height: auto;
   }
 
   .benefitsText1 p,
@@ -467,5 +471,28 @@
   .mainStyleSearch h2 {
     font-size: 2rem;
     line-height: 3rem;
+    
   }
-}
+
+  .benefitsImage img {
+    height: auto;
+
+  }
+
+  .benefitsWrapper {
+    justify-content: space-between;
+  }
+
+  
+
+
+// 
+
+
+/* styles.css | http://127.0.0.1:5500/styles/styles.css */
+
+
+  
+
+
+// 
