--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1931,4 +1931,24 @@ a {
     font-size: 2rem;
     line-height: 3rem;
   }
+  .benefitsImage img {
+    height: auto;
+  }
+  .benefitsFlexContainer1, .benefitsFlexContainer2 {
+    /* justify-content: center; */
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    min-height: auto;
+  }
+  .benefitsFlexContainer1, .benefitsFlexContainer2 {
+    /* min-height: 700px; */
+    /* position: relative; */
+    min-height: auto;
+  }
 }
+
+/* styles.css | http://127.0.0.1:5500/styles/styles.css */
