started blog media queries

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -70,4 +70,5 @@ a {
   padding: 0;
 }
 
-@import 'partials/mediaQueries';
+@import 'partials/homeMediaQueries';
+@import 'partials/blogMediaQueries';
