--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -27,6 +27,17 @@
   }
 }
 
+.hamburgerMenu {
+  font-size: 5rem;
+  align-self: center;
+  position: fixed;
+  z-index: 10;
+  top: 43px;
+  right: 40px;
+  display: none;
+  opacity: 0;
+}
+
 .blogHeaderNav {
   display: flex;
   flex-wrap: wrap;
