--- a/styles/sass/partials/_blogMediaQueries.scss
+++ b/styles/sass/partials/_blogMediaQueries.scss
@@ -5,7 +5,6 @@
 @media (max-width: 1050px) {
   .blogSection {
     justify-content: space-between;
-  
 
     .blogPost {
       max-width: 55%;
@@ -43,49 +42,34 @@
     }
   }
 
-  // .blogAsideText2 a {
-  //   font-size: 2rem;
-  // }
-
   .commentFlex .commentContainer {
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 20px;
-  
   }
 
   .comments {
-  
     display: flex;
     justify-content: center;
-    
   }
 
   .commentFlex {
-  width: auto;
- 
-  }
-
-  
-
-  .blogForm {
-    margin-left: 40px;
+    width: auto;
   }
 
   .blogForm {
- 
     width: 100%;
     display: flex;
     justify-content: center;
-   
+    margin-left: 40px;
+
     margin-left: 0;
     input {
       border: none;
       background: $mint;
     }
-  
+
     fieldset {
-      
       border: none;
       width: 300px;
       min-height: 400px;
@@ -94,24 +78,12 @@
       justify-content: initial;
       flex-wrap: wrap;
     }
-
-}
-}
-
-/* Landscape tablet */
-
-@media (max-width: 980px) {
-  
-
-
-
-  
+  }
 }
 
 // 850px Width
 
 @media (max-width: 850px) {
-
   .blogHeader {
     height: 70vh;
     min-height: 400px;
@@ -119,10 +91,11 @@
     background: url(/assets/blog-image.jpg) right / cover;
     position: relative;
   }
+
   .blogHeader {
     h1 {
       align-self: center;
-      font-size: 10rem;
+      font-size: 9rem;
       position: relative;
       top: 50px;
     }
@@ -130,10 +103,12 @@
     .blogHeaderNav {
       justify-content: center;
     }
-   .blogLogo {
-     display: none;
-   }
+
+    .blogLogo {
+      display: none;
+    }
   }
+
   .blogSection {
     flex-direction: column;
 
@@ -142,7 +117,7 @@
       text-align: center;
       font-size: 3.5rem;
     }
-    
+
     .blogTextContainer {
       display: flex;
       align-content: center;
@@ -156,28 +131,28 @@
       border-bottom: 1px solid $black;
     }
 
-   .blogAside img {
-     display: none;
-   }
+    .blogAside img {
+      display: none;
+    }
 
-   .blogPost {
-    background-color: $offWhite;
-    min-width: 100%;
-    box-shadow: 10px 10px 0 5px $yellow;
-  }
+    .blogPost {
+      background-color: $offWhite;
+      min-width: 100%;
+      box-shadow: 10px 10px 0 5px $yellow;
+    }
 
-  .blogImage{
-    display: flex;
-    justify-content: center;
-  }
+    .blogImage {
+      display: flex;
+      justify-content: center;
+    }
 
-  .blogImage img {
-    width: 70%;
-    position: initial;
-    margin-bottom: 45px;
-    margin-top: 45px;
-    box-shadow: 10px 15px 0 5px $yellow;
-  }
+    .blogImage img {
+      width: 70%;
+      position: initial;
+      margin-bottom: 45px;
+      margin-top: 45px;
+      box-shadow: 10px 15px 0 5px $yellow;
+    }
   }
 
   .blogAside {
@@ -185,7 +160,6 @@
     flex-wrap: wrap;
     flex-direction: row;
     width: 100%;
-    
   }
 
   // turning off the aside
@@ -208,4 +182,139 @@
     height: 220px;
     border-top: 1px solid $black;
   }
+}
+
+// 750px Width
+
+@media (max-width: 750px) {
+
+  .blogHeaderNav {
+    position: relative;
+
+    ul {
+      flex-direction: column;
+      position: fixed;
+      right: -400px;
+      top: 130px;
+      z-index: 10;
+      padding: 0;
+      background: rgba(224, 253, 223, 0.8);
+      height: 420px;
+      width: 257px;
+      transition: all 0.5s ease-in-out;
+      border-radius: 10px;
+
+      li {
+        text-align: center;
+        padding: 35px 0;
+
+        &:active {
+          background-color: rgba(6, 86, 53, 0.8);
+        }
+
+        a {
+          font-size: 3rem;
+          color: $everGreen;
+
+          &:hover {
+            border-bottom: none;
+          }
+
+          &:active {
+            color: $offWhite;
+          }
+        }
+      }
+    }
+
+    .blogHeaderNav {
+      input[type="checkbox"]:checked + ul {
+        right: -7px;
+      }
+    }
+
+    .commentFlex .commentContainer {
+      margin: 0 20px 30px 30px;
+    }
+
+    .blogForm {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-left: 0;
+    }
+  }
+}
+
+// 680px Width
+
+@media (max-width: 680px) {
+
+.commentFlex .commentContainer {
+      width: 100%;
+      margin: 0 30px;
+    }
+
+.blogForm {
+    display: flex;
+    flex-direction: column;
+
+    fieldset {
+      width: 100%;
+    }
+
+  .formFlex1 {
+
+    label {
+      position: absolute;
+      top: -10px;
+      margin-left: 20px;
+
+      @include bodyText(1.5rem);
+      text-transform: uppercase;
+    }
+
+    .emailFlex,
+    .nameFlex {
+      width: 100%;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      input[type="text"],
+      input[type="email"] {
+        width: 95%;
+      }
+    }
+  }
+
+  .formFlex2 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    padding-left: 10px;
+    
+
+    textarea {
+      min-width: 100%;
+      max-width: 100%;
+      min-height: 200px;
+      max-height: 200px;
+      padding: 20px;
+      background-color: $mint;
+      border: 2px solid $everGreen; 
+      resize: none;
+
+      @include bodyText(1.5rem);
+    }
+
+    button {
+      @include linkButton();
+      border: none;
+      width: 100%;
+      margin-top: 20px;
+      height: 35px;
+    }
+  }
+}
 }
