--- a/styles/sass/partials/_fonts.scss
+++ b/styles/sass/partials/_fonts.scss
@@ -1,56 +1,54 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumar+One&family=Kumar+One+Outline&family=Lato:wght@300;400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Kumar+One&family=Kumar+One+Outline&family=Lato:wght@300;400;700&display=swap");
 
 // KUMAR ONE OUTLINE
 @mixin mainHeading($sizeValue) {
   font-size: $sizeValue;
-	color: $black;
-	font-family: 'Kumar One Outline', sans-serif;
-	font-weight: regular;
-	line-height: 6.4rem;
+  color: $black;
+  font-family: "Kumar One Outline", sans-serif;
+  font-weight: regular;
+  line-height: 6.4rem;
 }
 
 // KUMAR SOLID
 @mixin subHeading($sizeValue) {
   font-size: $sizeValue;
-	color: $black;
-	font-family: 'Kumar One', sans-serif;
-	font-weight: regular;
-	line-height: 5.8rem;
-	letter-spacing: 2.1px;
+  color: $black;
+  font-family: "Kumar One", sans-serif;
+  font-weight: regular;
+  line-height: 5.8rem;
+  letter-spacing: 2.1px;
 }
 
 // LATO BOLD
-@mixin navBar($sizeValue){
-	font-size: $sizeValue;
-	color: $black;
-	font-family: 'Lato', sans-serif;
-	font-weight: 700;
-	line-height: 2.9rem;
-	letter-spacing: 1.4px;
+@mixin navBar($sizeValue) {
+  font-size: $sizeValue;
+  color: $black;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  line-height: 2.9rem;
+  letter-spacing: 1.4px;
 }
 
 // LATO REGULAR
-@mixin bodyText($sizeValue){
-	font-size: $sizeValue;
-	color: $black;
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
-	letter-spacing: 2px;
-	line-height: 3.2rem;
+@mixin bodyText($sizeValue) {
+  font-size: $sizeValue;
+  color: $black;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  letter-spacing: 2px;
+  line-height: 3.2rem;
 }
 
 // LINK
 
 @mixin linkButton() {
-    margin-top: 10px;
-    @include subHeading(1.5rem);
-    background-color: $everGreen;
-    color: $offWhite;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 225px;
-    height: 50px;
+  margin-top: 10px;
+  @include subHeading(1.5rem);
+  background-color: $everGreen;
+  color: $offWhite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 225px;
+  height: 50px;
 }
-
