--- a/styles/styles.css
+++ b/styles/styles.css
@@ -363,7 +363,7 @@ body {
   margin-top: 10px;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Kumar One', sans-serif;
+  font-family: "Kumar One", sans-serif;
   font-weight: regular;
   line-height: 5.8rem;
   letter-spacing: 2.1px;
@@ -559,7 +559,7 @@ body {
   margin-top: 10px;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Kumar One', sans-serif;
+  font-family: "Kumar One", sans-serif;
   font-weight: regular;
   line-height: 5.8rem;
   letter-spacing: 2.1px;
@@ -594,7 +594,7 @@ body {
   margin-top: 10px;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Kumar One', sans-serif;
+  font-family: "Kumar One", sans-serif;
   font-weight: regular;
   line-height: 5.8rem;
   letter-spacing: 2.1px;
@@ -676,7 +676,7 @@ body {
   margin-top: 10px;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Kumar One', sans-serif;
+  font-family: "Kumar One", sans-serif;
   font-weight: regular;
   line-height: 5.8rem;
   letter-spacing: 2.1px;
@@ -735,6 +735,19 @@ footer p {
 
 .blogHeaderFlex h1 {
   margin-top: 100px;
+}
+
+.hamburgerMenu {
+  font-size: 5rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  position: fixed;
+  z-index: 10;
+  top: 43px;
+  right: 40px;
+  display: none;
+  opacity: 0;
 }
 
 .blogHeaderNav {
@@ -881,7 +894,7 @@ footer p {
 .blogAsideText2 li a {
   font-size: 2rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -978,7 +991,7 @@ footer p {
   margin-left: 20px;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -999,7 +1012,7 @@ footer p {
   border-bottom: 2px solid #065635;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1029,7 +1042,7 @@ footer p {
   resize: none;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1039,7 +1052,7 @@ footer p {
   margin-top: 10px;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Kumar One', sans-serif;
+  font-family: "Kumar One", sans-serif;
   font-weight: regular;
   line-height: 5.8rem;
   letter-spacing: 2.1px;
@@ -1065,7 +1078,7 @@ footer p {
 textarea::-webkit-input-placeholder {
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1075,7 +1088,7 @@ textarea::-webkit-input-placeholder {
 textarea:-ms-input-placeholder {
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1085,7 +1098,7 @@ textarea:-ms-input-placeholder {
 textarea::-ms-input-placeholder {
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1095,7 +1108,7 @@ textarea::-ms-input-placeholder {
 textarea::placeholder {
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1253,7 +1266,7 @@ footer p {
   margin-left: 20px;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1274,7 +1287,7 @@ footer p {
   border-bottom: 2px solid #065635;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1304,7 +1317,7 @@ footer p {
   resize: none;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1314,7 +1327,7 @@ footer p {
   margin-top: 10px;
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Kumar One', sans-serif;
+  font-family: "Kumar One", sans-serif;
   font-weight: regular;
   line-height: 5.8rem;
   letter-spacing: 2.1px;
@@ -1340,7 +1353,7 @@ footer p {
 textarea::-webkit-input-placeholder {
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1350,7 +1363,7 @@ textarea::-webkit-input-placeholder {
 textarea:-ms-input-placeholder {
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1360,7 +1373,7 @@ textarea:-ms-input-placeholder {
 textarea::-ms-input-placeholder {
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1370,7 +1383,7 @@ textarea::-ms-input-placeholder {
 textarea::placeholder {
   font-size: 1.5rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -1439,7 +1452,7 @@ footer p {
 nav {
   font-size: 2rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 700;
   line-height: 2.9rem;
   letter-spacing: 1.4px;
@@ -1449,7 +1462,7 @@ nav a {
   text-decoration: none;
   font-size: 2rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 700;
   line-height: 2.9rem;
   letter-spacing: 1.4px;
@@ -1470,7 +1483,7 @@ a {
 h1 {
   font-size: 6.8rem;
   color: #151514;
-  font-family: 'Kumar One Outline', sans-serif;
+  font-family: "Kumar One Outline", sans-serif;
   font-weight: regular;
   line-height: 6.4rem;
   text-transform: uppercase;
@@ -1479,7 +1492,7 @@ h1 {
 h2 {
   font-size: 2.8rem;
   color: #151514;
-  font-family: 'Kumar One', sans-serif;
+  font-family: "Kumar One", sans-serif;
   font-weight: regular;
   line-height: 5.8rem;
   letter-spacing: 2.1px;
@@ -1488,7 +1501,7 @@ h2 {
 h3 {
   font-size: 1.8rem;
   color: #151514;
-  font-family: 'Kumar One', sans-serif;
+  font-family: "Kumar One", sans-serif;
   font-weight: regular;
   line-height: 5.8rem;
   letter-spacing: 2.1px;
@@ -1499,7 +1512,7 @@ h3 {
 p {
   font-size: 2rem;
   color: #151514;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 400;
   letter-spacing: 2px;
   line-height: 3.2rem;
@@ -2009,9 +2022,6 @@ a {
     width: auto;
   }
   .blogForm {
-    margin-left: 40px;
-  }
-  .blogForm {
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2019,6 +2029,7 @@ a {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-left: 40px;
     margin-left: 0;
   }
   .blogForm input {
@@ -2043,7 +2054,6 @@ a {
   }
 }
 
-/* Landscape tablet */
 @media (max-width: 850px) {
   .blogHeader {
     height: 70vh;
@@ -2056,7 +2066,7 @@ a {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    font-size: 10rem;
+    font-size: 9rem;
     position: relative;
     top: 50px;
   }
@@ -2145,5 +2155,165 @@ a {
   .blogAsideText2 {
     height: 220px;
     border-top: 1px solid #151514;
+  }
+}
+
+@media (max-width: 750px) {
+  .blogHeaderNav {
+    position: relative;
+  }
+  .blogHeaderNav ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: fixed;
+    right: -400px;
+    top: 130px;
+    z-index: 10;
+    padding: 0;
+    background: rgba(224, 253, 223, 0.8);
+    height: 420px;
+    width: 257px;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    border-radius: 10px;
+  }
+  .blogHeaderNav ul li {
+    text-align: center;
+    padding: 35px 0;
+  }
+  .blogHeaderNav ul li:active {
+    background-color: rgba(6, 86, 53, 0.8);
+  }
+  .blogHeaderNav ul li a {
+    font-size: 3rem;
+    color: #065635;
+  }
+  .blogHeaderNav ul li a:hover {
+    border-bottom: none;
+  }
+  .blogHeaderNav ul li a:active {
+    color: #F5F5F5;
+  }
+  .blogHeaderNav .blogHeaderNav input[type="checkbox"]:checked + ul {
+    right: -7px;
+  }
+  .blogHeaderNav .commentFlex .commentContainer {
+    margin: 0 20px 30px 30px;
+  }
+  .blogHeaderNav .blogForm {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 680px) {
+  .commentFlex .commentContainer {
+    width: 100%;
+    margin: 0 30px;
+  }
+  .blogForm {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .blogForm fieldset {
+    width: 100%;
+  }
+  .blogForm .formFlex1 label {
+    position: absolute;
+    top: -10px;
+    margin-left: 20px;
+    font-size: 1.5rem;
+    color: #151514;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    letter-spacing: 2px;
+    line-height: 3.2rem;
+    text-transform: uppercase;
+  }
+  .blogForm .formFlex1 .emailFlex,
+  .blogForm .formFlex1 .nameFlex {
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .blogForm .formFlex1 .emailFlex input[type="text"],
+  .blogForm .formFlex1 .emailFlex input[type="email"],
+  .blogForm .formFlex1 .nameFlex input[type="text"],
+  .blogForm .formFlex1 .nameFlex input[type="email"] {
+    width: 95%;
+  }
+  .blogForm .formFlex2 {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 20px;
+    padding-left: 10px;
+  }
+  .blogForm .formFlex2 textarea {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 200px;
+    max-height: 200px;
+    padding: 20px;
+    background-color: #E0FDDF;
+    border: 2px solid #065635;
+    resize: none;
+    font-size: 1.5rem;
+    color: #151514;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    letter-spacing: 2px;
+    line-height: 3.2rem;
+  }
+  .blogForm .formFlex2 button {
+    margin-top: 10px;
+    font-size: 1.5rem;
+    color: #151514;
+    font-family: "Kumar One", sans-serif;
+    font-weight: regular;
+    line-height: 5.8rem;
+    letter-spacing: 2.1px;
+    background-color: #065635;
+    color: #F5F5F5;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 225px;
+    height: 50px;
+    border: none;
+    width: 100%;
+    margin-top: 20px;
+    height: 35px;
   }
 }
