--- a/styles/sass/partials/_homeMediaQueries.scss
+++ b/styles/sass/partials/_homeMediaQueries.scss
@@ -241,9 +241,13 @@
       li {
         text-align: center;
         padding: 35px 0;
+        width: 257px;
 
         &:active {
           background-color: rgba(6, 86, 53, 0.8);
+          a {
+            color: $offWhite;
+          }
         }
 
         a {
