--- a/styles/sass/partials/_blogMediaQueries.scss
+++ b/styles/sass/partials/_blogMediaQueries.scss
@@ -97,15 +97,18 @@
       align-self: center;
       font-size: 9rem;
       position: relative;
-      top: 50px;
+      top: 20px;
     }
 
     .blogHeaderNav {
       justify-content: center;
+      flex-direction: column-reverse;
     }
 
     .blogLogo {
-      display: none;
+      // display: none;
+      padding-left: 30px;
+      padding-top: 30px;
     }
   }
 
@@ -188,14 +191,14 @@
 
 @media (max-width: 750px) {
 
-  input[type="checkbox"]:checked + ul {
+  input[type="checkbox"]:checked + .blogNav {
     right: -7px;
     
   }
 
   .blogHeaderNav {
     
-    ul {
+    .blogNav {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -207,7 +210,7 @@
     }
      position: relative;
 
-    ul {
+    .blogNav {
       flex-direction: column;
       position: fixed;
       right: -400px;
