--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -8,7 +8,7 @@
   background-color: $mint;
 }
 
-// Blog header
+// Contact header
 
 .contactHeader {
   height: 70vh;
@@ -130,7 +130,7 @@
       max-height: 200px;
       padding: 20px;
       background-color: $offWhite;
-      border: 2px solid $everGreen; 
+      border: 2px solid $everGreen;
       resize: none;
 
       @include bodyText(1.5rem);
@@ -168,13 +168,29 @@ textarea::placeholder {
   .socialIcons + p {
     margin-top: 20px;
   }
+  a {
+    padding: 10px;
+
+    & :first-child {
+      padding-left: 0;
+    }
+  }
 
   a i {
     font-size: 2.5rem;
     color: $everGreen;
-    padding-right: 25px;
+    padding: 20px;
     margin-bottom: 0;
+
+    & :first-child {
+      padding-left: 0;
+    }
   }
+}
+
+.contactEmailAddress :hover,
+.contactEmailAddress :focus {
+  color: $everGreen;
 }
 
 .address {
