--- a/styles/sass/partials/_fonts.scss
+++ b/styles/sass/partials/_fonts.scss
@@ -51,4 +51,11 @@
   align-items: center;
   width: 225px;
   height: 50px;
+
+  &:hover,
+  &:focus {
+    background-color: $offWhite;
+    border: 3px solid $everGreen;
+    color: $everGreen;
+  }
 }
