--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -156,9 +156,13 @@ textarea::placeholder {
   height: 300px;
   align-self: center;
   position: relative;
-  top: -20px;
-  margin-left: 20px;
-  padding: 20px 0 20px 20px;
+  top: -50px;
+  padding: 20px;
+  padding-left: 40px;
+
+  & :first-child {
+    padding-left: 0;
+  }
 
   .socialIcons {
     display: flex;
@@ -170,10 +174,6 @@ textarea::placeholder {
   }
   a {
     padding: 10px;
-
-    & :first-child {
-      padding-left: 0;
-    }
   }
 
   a i {
@@ -181,10 +181,6 @@ textarea::placeholder {
     color: $everGreen;
     padding: 20px;
     margin-bottom: 0;
-
-    & :first-child {
-      padding-left: 0;
-    }
   }
 }
 
