--- a/styles/sass/partials/_contactMediaQueries.scss
+++ b/styles/sass/partials/_contactMediaQueries.scss
@@ -3,7 +3,6 @@
 /* Small desktops */
 
 @media (max-width: 1050px) {
-  
   .contactFlex {
     flex-direction: column;
     justify-content: center;
@@ -16,41 +15,38 @@
     }
   }
 
-.contactInfo {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
-  top: -20px;
-  margin-left: 20px;
-  padding: 20px 0 20px 20px;
-
-  .socialIcons {
+  .contactInfo {
+    width: 100%;
+    height: auto;
     display: flex;
-    justify-content: flex-start;
-  }
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    top: -20px;
+    padding: 20px;
 
-  .socialIcons + p {
-    margin-top: 20px;
-  }
+    .socialIcons {
+      display: flex;
+      justify-content: center;
+    }
 
-  a i {
-    font-size: 2.5rem;
-    color: $everGreen;
-    padding-right: 25px;
-    margin-bottom: 0;
-  }
-}
+    .socialIcons + p {
+      margin-top: 20px;
+    }
 
+    a i {
+      font-size: 2.5rem;
+      color: $everGreen;
+      padding-right: 25px;
+      margin-bottom: 0;
+    }
+  }
 }
 
 // 850px Width
 
 @media (max-width: 850px) {
-
   .contactHeader {
     height: 70vh;
     min-height: 400px;
@@ -64,7 +60,6 @@
       align-self: center;
       font-size: 7.5rem;
       position: relative;
-      top: -20px;
     }
 
     .contactHeaderNav {
@@ -78,35 +73,193 @@
     }
   }
 
-.contactInfo {
-  width: 100%;
-  height: 300px;
-  flex-direction: column;
-  
-  a {
-    padding: 20px;
-    padding-bottom: 0;
+  .contactFlex {
+    margin-top: 45px;
 
-    & :last-child {
-      padding-right: 0;
+    .contactForm {
+      top: 0;
+      left: 0;
+      box-shadow: none;
     }
   }
 
-.address {
-  text-align: center;
+  .contactInfo {
+    width: 100%;
+    height: 300px;
+    margin-top: 30px;
+    flex-direction: column;
+
+    a {
+      padding: 20px;
+      padding-bottom: 0;
+
+      & :last-child {
+        padding-right: 0;
+      }
+    }
+
+    .address {
+      text-align: center;
+    }
+  }
+
+  // 750px Width
+
+  @media (max-width: 750px) {
+    input[type="checkbox"]:checked + .contactNav {
+      right: -7px;
+    }
+
+    .contactHeader {
+      h1 {
+        font-size: 6rem;
+      }
+    }
+
+    .contactHeaderNav {
+      .contactNav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        min-width: 257px;
+
+        li {
+          width: 257px;
+        }
+      }
+      position: relative;
+
+      .contactNav {
+        flex-direction: column;
+        position: fixed;
+        right: -400px;
+        top: 130px;
+        z-index: 10;
+        padding: 0;
+        background: rgba(224, 253, 223, 0.8);
+        height: 420px;
+        width: 257px;
+        transition: all 0.5s ease-in-out;
+        border-radius: 10px;
+
+        li {
+          text-align: center;
+          padding: 35px 0;
+
+          &:active {
+            background-color: rgba(6, 86, 53, 0.8);
+            a {
+              color: $offWhite;
+            }
+          }
+
+          a {
+            font-size: 3rem;
+            color: $everGreen;
+
+            &:hover,
+            &:focus {
+              border-bottom: none;
+            }
+
+            &:active {
+              color: $offWhite;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
-}
+// 680px Width
 
+@media (max-width: 680px) {
+  .contactHeader {
+    height: 70vh;
+    min-height: 70vh;
 
+    h1 {
+      text-align: center;
+    }
+  }
 
+  .contactForm {
+    display: flex;
+    flex-direction: column;
 
+    fieldset {
+      width: 100%;
+      min-height: 600px;
+    }
 
+    .contactFormFlex1 {
+      padding-right: 0;
+      padding: 10px;
+      height: 200px;
+      flex-wrap: wrap;
+      label {
+        position: absolute;
+        top: -10px;
+        margin-left: 20px;
 
+        @include bodyText(1.5rem);
+        text-transform: uppercase;
+      }
 
+      .contactEmailFlex label {
+        position: absolute;
+        top: 78px;
+      }
+      .contactNameFlex label {
+        position: absolute;
+        top: -29px;
+      }
 
+      .contactEmailFlex,
+      .contactNameFlex {
+        width: 100%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        input[type="text"],
+        input[type="email"] {
+          width: 100%;
+        }
+      }
+    }
 
+    .contactNameFlex {
+      margin-top: 10px;
+      transform: translateY(-15px);
+    }
 
+    .contactFormFlex2 {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      padding: 5px;
 
+      textarea {
+        min-width: 100%;
+        max-width: 100%;
+        min-height: 200px;
+        max-height: 200px;
+        padding: 20px;
+        background-color: $offWhite;
+        border: 2px solid $everGreen;
+        resize: none;
 
+        @include bodyText(1.5rem);
+      }
+
+      button {
+        @include linkButton();
+        border: none;
+        width: 100%;
+        margin-top: 20px;
+        height: 35px;
+      }
+    }
+  }
 }
