--- a/styles/sass/partials/_homeMediaQueries.scss
+++ b/styles/sass/partials/_homeMediaQueries.scss
@@ -368,10 +368,10 @@
 @media (max-width: 430px) {
   .mainHeader {
     h1 {
-      font-size: 2.8rem;
+      font-size: 3rem;
       width: 80%;
       margin: 45px 0;
-      margin-left: 30px;
+      // margin-left: 30px;
     }
   }
 
@@ -379,7 +379,6 @@
     display: flex;
     flex-wrap: nowrap;
     text-align: left;
-    // border: 2px solid green;
     width: auto;
     min-width: 200px;
     justify-content: flex-start;
@@ -427,9 +426,9 @@
   }
 
   .mainHeaderImageFlex {
-    position: relative;
-    top: 100px;
-    text-align: center;
+    // position: relative;
+    margin: 0 auto;
+    // top: 100px;
 
     h1 {
       font-size: 3rem;
