--- a/styles/styles.css
+++ b/styles/styles.css
@@ -361,6 +361,7 @@ body {
 
 .materialsText .linkButton {
   margin-top: 10px;
+  padding-top: 1%;
   font-size: 1.5rem;
   color: #151514;
   font-family: "Kumar One", sans-serif;
@@ -563,6 +564,7 @@ body {
 
 .benefitsText1 .linkButton {
   margin-top: 10px;
+  padding-top: 1%;
   font-size: 1.5rem;
   color: #151514;
   font-family: "Kumar One", sans-serif;
@@ -604,6 +606,7 @@ body {
 
 .benefitsText2 .linkButton {
   margin-top: 10px;
+  padding-top: 1%;
   font-size: 1.5rem;
   color: #151514;
   font-family: "Kumar One", sans-serif;
@@ -692,6 +695,7 @@ body {
 
 .styleSearchFlex .linkButton {
   margin-top: 10px;
+  padding-top: 1%;
   font-size: 1.5rem;
   color: #151514;
   font-family: "Kumar One", sans-serif;
@@ -1075,6 +1079,7 @@ footer p {
 
 .blogForm .formFlex2 button {
   margin-top: 10px;
+  padding-top: 1%;
   font-size: 1.5rem;
   color: #151514;
   font-family: "Kumar One", sans-serif;
@@ -1356,6 +1361,7 @@ footer p {
 
 .contactForm .contactFormFlex2 button {
   margin-top: 10px;
+  padding-top: 1%;
   font-size: 1.5rem;
   color: #151514;
   font-family: "Kumar One", sans-serif;
@@ -1434,9 +1440,13 @@ textarea::placeholder {
       -ms-grid-row-align: center;
       align-self: center;
   position: relative;
-  top: -20px;
-  margin-left: 20px;
-  padding: 20px 0 20px 20px;
+  top: -50px;
+  padding: 20px;
+  padding-left: 40px;
+}
+
+.contactInfo :first-child {
+  padding-left: 0;
 }
 
 .contactInfo .socialIcons {
@@ -1456,19 +1466,11 @@ textarea::placeholder {
   padding: 10px;
 }
 
-.contactInfo a :first-child {
-  padding-left: 0;
-}
-
 .contactInfo a i {
   font-size: 2.5rem;
   color: #065635;
   padding: 20px;
   margin-bottom: 0;
-}
-
-.contactInfo a i :first-child {
-  padding-left: 0;
 }
 
 .contactEmailAddress :hover,
@@ -1911,10 +1913,9 @@ a {
 
 @media (max-width: 430px) {
   .mainHeader h1 {
-    font-size: 2.8rem;
+    font-size: 3rem;
     width: 80%;
     margin: 45px 0;
-    margin-left: 30px;
   }
   .mainHeaderImageFlex {
     display: -webkit-box;
@@ -1965,9 +1966,7 @@ a {
     margin-top: 0;
   }
   .mainHeaderImageFlex {
-    position: relative;
-    top: 100px;
-    text-align: center;
+    margin: 0 auto;
   }
   .mainHeaderImageFlex h1 {
     font-size: 3rem;
@@ -2124,9 +2123,8 @@ a {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    font-size: 9rem;
+    font-size: 7.5rem;
     position: relative;
-    top: 20px;
   }
   .blogHeader .blogHeaderNav {
     -webkit-box-pack: center;
@@ -2138,7 +2136,7 @@ a {
             flex-direction: column-reverse;
   }
   .blogHeader .blogLogo {
-    padding-left: 30px;
+    padding-left: 38px;
     padding-top: 30px;
   }
   .blogSection {
@@ -2225,6 +2223,9 @@ a {
   input[type="checkbox"]:checked + .blogNav {
     right: -7px;
   }
+  .blogHeader h1 {
+    font-size: 6rem;
+  }
   .blogHeaderNav {
     position: relative;
   }
@@ -2274,7 +2275,7 @@ a {
     font-size: 3rem;
     color: #065635;
   }
-  .blogHeaderNav .blogNav li a:hover {
+  .blogHeaderNav .blogNav li a:hover, .blogHeaderNav .blogNav li a:focus {
     border-bottom: none;
   }
   .blogHeaderNav .blogNav li a:active {
@@ -2284,8 +2285,8 @@ a {
 
 @media (max-width: 680px) {
   .blogHeader {
-    height: 100vh;
-    min-height: 100vh;
+    height: 70vh;
+    min-height: 70vh;
   }
   .blogText {
     padding-right: 0;
@@ -2397,6 +2398,7 @@ a {
   }
   .blogForm .formFlex2 button {
     margin-top: 10px;
+    padding-top: 1%;
     font-size: 1.5rem;
     color: #151514;
     font-family: "Kumar One", sans-serif;
@@ -2465,16 +2467,15 @@ a {
             align-items: center;
     position: relative;
     top: -20px;
-    margin-left: 20px;
-    padding: 20px 0 20px 20px;
+    padding: 20px;
   }
   .contactInfo .socialIcons {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .contactInfo .socialIcons + p {
     margin-top: 20px;
@@ -2501,7 +2502,6 @@ a {
         align-self: center;
     font-size: 7.5rem;
     position: relative;
-    top: -20px;
   }
   .contactHeader .contactHeaderNav {
     -webkit-box-pack: center;
@@ -2516,9 +2516,19 @@ a {
     padding-left: 40px;
     padding-top: 30px;
   }
+  .contactFlex {
+    margin-top: 45px;
+  }
+  .contactFlex .contactForm {
+    top: 0;
+    left: 0;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
   .contactInfo {
     width: 100%;
     height: 300px;
+    margin-top: 30px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -2533,5 +2543,202 @@ a {
   }
   .contactInfo .address {
     text-align: center;
+  }
+}
+
+@media (max-width: 850px) and (max-width: 750px) {
+  input[type="checkbox"]:checked + .contactNav {
+    right: -7px;
+  }
+  .contactHeader h1 {
+    font-size: 6rem;
+  }
+  .contactHeaderNav {
+    position: relative;
+  }
+  .contactHeaderNav .contactNav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    min-width: 257px;
+  }
+  .contactHeaderNav .contactNav li {
+    width: 257px;
+  }
+  .contactHeaderNav .contactNav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: fixed;
+    right: -400px;
+    top: 130px;
+    z-index: 10;
+    padding: 0;
+    background: rgba(224, 253, 223, 0.8);
+    height: 420px;
+    width: 257px;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    border-radius: 10px;
+  }
+  .contactHeaderNav .contactNav li {
+    text-align: center;
+    padding: 35px 0;
+  }
+  .contactHeaderNav .contactNav li:active {
+    background-color: rgba(6, 86, 53, 0.8);
+  }
+  .contactHeaderNav .contactNav li:active a {
+    color: #F5F5F5;
+  }
+  .contactHeaderNav .contactNav li a {
+    font-size: 3rem;
+    color: #065635;
+  }
+  .contactHeaderNav .contactNav li a:hover, .contactHeaderNav .contactNav li a:focus {
+    border-bottom: none;
+  }
+  .contactHeaderNav .contactNav li a:active {
+    color: #F5F5F5;
+  }
+}
+
+@media (max-width: 680px) {
+  .contactHeader {
+    height: 70vh;
+    min-height: 70vh;
+  }
+  .contactHeader h1 {
+    text-align: center;
+  }
+  .contactForm {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contactForm fieldset {
+    width: 100%;
+    min-height: 600px;
+  }
+  .contactForm .contactFormFlex1 {
+    padding-right: 0;
+    padding: 10px;
+    height: 200px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .contactForm .contactFormFlex1 label {
+    position: absolute;
+    top: -10px;
+    margin-left: 20px;
+    font-size: 1.5rem;
+    color: #151514;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    letter-spacing: 2px;
+    line-height: 3.2rem;
+    text-transform: uppercase;
+  }
+  .contactForm .contactFormFlex1 .contactEmailFlex label {
+    position: absolute;
+    top: 78px;
+  }
+  .contactForm .contactFormFlex1 .contactNameFlex label {
+    position: absolute;
+    top: -29px;
+  }
+  .contactForm .contactFormFlex1 .contactEmailFlex,
+  .contactForm .contactFormFlex1 .contactNameFlex {
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .contactForm .contactFormFlex1 .contactEmailFlex input[type="text"],
+  .contactForm .contactFormFlex1 .contactEmailFlex input[type="email"],
+  .contactForm .contactFormFlex1 .contactNameFlex input[type="text"],
+  .contactForm .contactFormFlex1 .contactNameFlex input[type="email"] {
+    width: 100%;
+  }
+  .contactForm .contactNameFlex {
+    margin-top: 10px;
+    -webkit-transform: translateY(-15px);
+            transform: translateY(-15px);
+  }
+  .contactForm .contactFormFlex2 {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 5px;
+  }
+  .contactForm .contactFormFlex2 textarea {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 200px;
+    max-height: 200px;
+    padding: 20px;
+    background-color: #F5F5F5;
+    border: 2px solid #065635;
+    resize: none;
+    font-size: 1.5rem;
+    color: #151514;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    letter-spacing: 2px;
+    line-height: 3.2rem;
+  }
+  .contactForm .contactFormFlex2 button {
+    margin-top: 10px;
+    padding-top: 1%;
+    font-size: 1.5rem;
+    color: #151514;
+    font-family: "Kumar One", sans-serif;
+    font-weight: regular;
+    line-height: 5.8rem;
+    letter-spacing: 2.1px;
+    background-color: #065635;
+    color: #F5F5F5;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 225px;
+    height: 50px;
+    border: none;
+    width: 100%;
+    margin-top: 20px;
+    height: 35px;
+  }
+  .contactForm .contactFormFlex2 button:hover, .contactForm .contactFormFlex2 button:focus {
+    background-color: #F5F5F5;
+    border: 3px solid #065635;
+    color: #065635;
   }
 }
